--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 certifi==2019.11.28
 chardet==3.0.4
 Django==2.2.9
+django-filter==2.2.0
+djangorestframework==3.11.0
 idna==2.8
+Markdown==3.1.1
 Pillow==7.0.0
 pytz==2019.3
 requests==2.22.0
